<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/app_login" />
        <item
            android:id="@+id/nav_my_coupon"
            android:icon="@drawable/ic_my_cp"
            android:title="@string/app_my_coupon" />
        <item
            android:id="@+id/nav_make_coupon"
            android:icon="@drawable/ic_make_cp"
            android:title="@string/app_make_my_coupon" />
        <item
            android:id="@+id/nav_search_location"
            android:icon="@drawable/ic_search_location"
            android:title="@string/app_find_cp_location" />
    </group>

    <item android:title="@string/app_communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
